смержился